# authModule

./: FRAMEFORK.txt  FRAMEWORK.yml  aFuturo.txt  auth_back_crypto.py  auth_front_sdk.js  back.files.txt  cifradoKMS.txt  db.diagram.txt  db.script.creator.txt  docker-compose.yml  encript.fw.workflow  front.files.arq.txt  frontEndYamel.yml  idea.txt  little.db  msgStructure.txt  private.pem  promp.txt  req.back.readeble.txt  req.back.v2.yml  req.back.v3.1.yml  req.back.v3.2.yml  req.back.v3.yml  requerimientos.txt  requerimientosFrontend.txt  todo  todoByGpt.txt  webTester.html
auth-mvp-fastapi/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
auth-mvp-fastapi/app/: main.py
auth-mvp-fastapi/app/api/: auth.py
auth-mvp-fastapi/app/core/: config.py  errors.py
auth-mvp-fastapi/app/models/: orm.py  schemas.py
auth-mvp-fastapi/app/service/: auth_service.py
auth-mvp-fastapi/app/utils/: ratelimit.py  security.py
auth-mvp-fastapi/migrations/: 001_init.sql
auth-mvp-fastapi/tests/: test_acceptance.py
auth_module/: .env  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
auth_module/api/: __init__.py  auth.py  jwks.py
auth_module/db/: __init__.py  models.py  seeds_dev.py  session.py
auth_module/db/migrations/: env.py
auth_module/env/keys/: enc-dev-1.json  enc-front-dev-1.json  sig-dev-1.json
auth_module/models/: schemas.py
auth_module/services/: auth_service.py  crypto_services.py  key_stores.py
auth_module/utils/: audit.py  crypto.py  env.py  errors.py  rate_limit.py  security_headers.py
(+142 files in other folders)
