[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "auth-module-fastapi"
version = "0.1.0"
description = "Auth module per req.back.v3.2.yml (JWT JWS+JWE nested, refresh opaque, JWKS, front-side encryption)."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"